# ros2_obstacle_notifier_component

./: README.md
ros2_ws/src/obstacle_notifier/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_notifier/src/: obstalce_notifier_component.cpp
